--- a/Find_Literature.ipynb
+++ b/Find_Literature.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# - Load required libraries"
+    "# - Load required files and libraries"
    ]
   },
   {
@@ -100,11 +100,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find Papers widgets\n",
+    "# Find Literature widgets\n",
     "## - Select keywords file\n",
     "## - Construct search string for WOS\n",
-    "## - Enter start year, filter, and record batch for search results\n",
-    "## - Move record file to desired directory with desired name"
+    "## - Enter start date, filter, and record batch for search results"
    ]
   },
   {
