--- a/Find_Literature.ipynb
+++ b/Find_Literature.ipynb
@@ -15,6 +15,8 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('./script_files/')\n",
     "from find_literature_class import FindLiterature"
    ]
   },
@@ -116,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c3be0dd6e734eea8b76f3b549735935",
+       "model_id": "e38314e4180f4fd4923b18c1309e5bbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e428f85208aa44eaac7481b13128d478",
+       "model_id": "cc652f21bf2a4b729a87d1ebb88751b6",
        "version_major": 2,
        "version_minor": 0
       },
